--- a/views/form.ejs
+++ b/views/form.ejs
@@ -93,7 +93,8 @@
         <h2 class="section-title">Question Assessment</h2>
           <% 
         // Find the specific subject from the subjects array
-        let subjectData = subjects.find(subject => subject.subject === subjectname);
+        let subjectData = subjects.find(subject => subject.subject === subjectname && 
+            subject.forClass === forClass);
         let max = parseInt(subjectData.max); // Get the max number of questions for the selected subject
         %>
           <div class="question-list">
